# rust_fullstack

project1/groceries-app/: eslint.config.mjs  package-lock.json  package.json
project1/groceries-app/src/: App.js  index.js
project1/groceries_list/: Cargo.toml
project1/groceries_list/src/: lib.rs
project2/patient_mangement_backend/: .env  Cargo.toml
project2/patient_mangement_backend/src/: db.rs  handlers.rs  main.rs  models.rs
project3/mongo_connection/: Cargo.toml
project3/mongo_connection/src/: main.rs
project3/rust_backend/: Cargo.toml
project3/rust_backend/src/: main.rs
