[package]
name = "patient_mangement_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
mongodb = { version = "3.1.0", features = ["sync"] }   # MongoDB client for Rust
serde = { version = "1.0.214", features = ["derive"] } 
serde_json = "1.0.132"
